# polarity-fetcher

./: .gitignore  load-database.py  poll-polarity.sh  pyproject.toml  update-polarity.py
